--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <head>
   <style>
       body{ padding:0; margin:0; background: black; }
+      .title  { position: absolute; top:50%; left:50%; transform: translate(-50%,-50%); }
+      .title a { color:white; text-transform: uppercase; font-size:3vw; letter-spacing: 2vw; text-decoration: none; }
   </style>
+
 </head>
 <html>
 <body>
+  <div class="title"><a href='http://richardmattka.com'>RichardMattka.com</a></div>
 </body>
 </html>
