--- a/ddd18-exp/index.html
+++ b/ddd18-exp/index.html
@@ -303,7 +303,9 @@ function render() {
 
     if(turnOn) {  
         console.log("on");
-        uniforms2.intensity.value +=.001 ;
+        uniforms2.intensity.value +=.1 ;
+        material.uniforms[ 'time' ].value *= 10000.0;
+        //uniforms2.iGlobalTime.value *=10.0 ;
      }  else {
     	   uniforms2.intensity.value =1.0;
      }
@@ -415,19 +417,19 @@ function render() {
     
     var sounds=[];
     // set up dsounds
-    var sound = new Howl({ src: "assets/Risers_Pulse_02.mp3"});
+    var sound = new Howl({ src: "assets/1.mp3"});
   	sounds["click1"] = sound;
 
-  	var sound = new Howl({ src: "assets/Risers_Pulse_03.mp3"});
+  	var sound = new Howl({ src: "assets/2.mp3"});
   	sounds["click2"] = sound;
 
-  	var sound = new Howl({ src: "assets/Trailer_Hits_Impact_01.mp3"});
+  	var sound = new Howl({ src: "assets/3.mp3"});
   	sounds["click3"] = sound;
 
-  	var sound = new Howl({ src: "assets/Risers_Tech_04.mp3"});
+  	var sound = new Howl({ src: "assets/4.mp3"});
   	sounds["click4"] = sound;
 
-  	var sound = new Howl({ src: "assets/Robotic_19.mp3"});
+  	var sound = new Howl({ src: "assets/5.mp3"});
   	sounds["click5"] = sound;
 
 
@@ -437,11 +439,12 @@ function render() {
     $(document).mousedown(function(){
     	clickCount++;
   		console.log(clickCount);
-  		var n = Math.ceil(Math.random()*5);
+  		var n = Math.floor(Math.random() * (5)) + 1;
   		sounds["click"+n].play();
   		
-  		mouseY+=clickCount*50.0;
+  		//mouseY+=clickCount*50.0;
   		mouseX+=clickCount*100.0;
+
 
 
 
