--- a/ddd18-exp/index.html
+++ b/ddd18-exp/index.html
@@ -44,7 +44,7 @@
               "MONOGRID",
               "DEVX 2018",
               "",
-              "Digitial Design Days",
+              "Digital Design Days",
               "",
               "",
               "click to interact",
